# Weft

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
packaging/: apparmor-weft-umu  weft-installer.desktop  weft-launcher.service  weft.desktop
packaging/deb-scripts/: postinst  postrm
weft-core/: Cargo.toml
weft-core/src/: config.rs  index.rs  launch.rs  lib.rs  model.rs  provider.rs  search.rs
weft-core/src/providers/: apps.rs  calc.rs  files.rs  mod.rs  usage.rs
weft-core/src/sources/: desktop.rs  mod.rs  steam.rs  windows.rs
weft-core/src/windows/: discover.rs  epic.rs  gog.rs  icon.rs  installer.rs  manifest.rs  mod.rs  prefix.rs  runtime.rs
weft-core/tests/: providers.rs  scan.rs
weft-core/tests/fixtures/applications-system/: dead-icon.desktop  firefox.desktop  gedit.desktop  gimp.desktop  hidden.desktop  htop.desktop  kde-only.desktop  malformed.desktop
weft-core/tests/fixtures/applications-user/: firefox.desktop  steam-portal2.desktop
weft-core/tests/fixtures/applications-user/wine/Programs/: notepadpp.desktop
weft-core/tests/fixtures/flatpak-exports/: org.gimp.GIMP.desktop  org.gnome.Calculator.desktop
weft-installer/: Cargo.toml
weft-installer/src/: main.rs
weft-launcher/: Cargo.toml
weft-launcher/src/: main.rs  setup.rs  theme.css
weft-windows/: Cargo.toml
weft-windows/src/: main.rs
