[package]
name = "weft-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
fend-core = "1.5.8"
freedesktop-desktop-entry = "0.7"
keyvalues-parser = "0.2"
nucleo-matcher = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
shell-words = "1"
thiserror = "2"
toml = "1.1.2"
