[package]
name = "weft-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[dependencies]
encoding_rs = "0.8.35"
fend-core = "1.5.8"
freedesktop-desktop-entry = "0.7"
keyvalues-parser = "0.2"
lnk = "0.6.4"
nucleo-matcher = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shell-words = "1"
thiserror = "2"
toml = "1.1.2"
