[package]
name = "weft-launcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
weft-core = { path = "../weft-core" }
gtk = { package = "gtk4", version = "0.9", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
notify = "8.2.0"
